--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "org-ql"]
 	path = org-ql
 	url = https://github.com/alphapapa/org-ql
+[submodule "emacs-calfw"]
+	path = emacs-calfw
+	url = https://github.com/kiwanami/emacs-calfw/
